fixed 'farmview' alignment in header and homepage link to contact page

--- a/pages/static/pages/css/style.css
+++ b/pages/static/pages/css/style.css
@@ -359,7 +359,7 @@
 	#logo
 	{
 		position: absolute;
-		top: 1em;
+		top: .4em;
 		left: 0;
 	}
 	
@@ -719,7 +719,7 @@
 	padding-left:30px;
 	padding-right:30px;
 	padding-top:30px;
-	padding-bottom:40px;
+	padding-bottom:20px;
 	width: 100%;
 	float: left;
 	/*left: 50%;*/
